Fixed song block alignment bug

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -1,7 +1,11 @@
-.column-default {
+.vertical-center {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+.vertical-default {
+	display: flex;
+	flex-direction: column;
 }
 .horizontal-center {
 	display: flex;
